--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,10 +3,11 @@ stages:
 
 change infra:
   stage: infra-change
-  image: oowy/opentofu
+  # image: oowy/opentofu
   script:
     - tofu version
-  rules:
-    - if: $CI_COMMIT_BRANCH == "master"
-      changes:
-        - init # any change in this file will trigger gitlab runner
+    - tofu plan
+  # rules:
+  #   - if: $CI_COMMIT_BRANCH == "master"
+  #     changes:
+  #       - init # any change in this file will trigger gitlab runner
