--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,9 +5,8 @@ change infra:
   stage: infra-change
   script:
     - tofu init
-    - tofu version
+    - tofu validate
     - tofu plan
-#
 # rules:
 #   - if: $CI_COMMIT_BRANCH == "master"
 #     changes:
