--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ apply infra:
   script:
     - tofu apply -var="pm_api_token_secret=$PM_API_TOKEN_SECRET"
   dependencies:
-    - plan
+    - infra-plan
   when: manual
 # rules:
 #   - if: $CI_COMMIT_BRANCH == "master"
