--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,8 @@ apply infra:
   stage: infra-apply
   script:
     - ssh-keygen -f id_ed25519 -N ""
-    - sshpass -p "$PM_NODE_PASSWORD" ssh-copy-id -i ./id_ed25519.pub root@$PM_NODE_IP_ADDRESS
+    # - sshpass -p "$PM_NODE_PASSWORD" ssh-copy-id -i ./id_ed25519.pub root@$PM_NODE_IP_ADDRESS
+    - ssh-copy-id -i ./id_ed25519.pub tofu-user@$PM_NODE_IP_ADDRESS
     - tofu apply -var="pm_api_token_secret=$PM_API_TOKEN_SECRET" -auto-approve
   dependencies:
     - plan infra
