--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ plan infra:
   script:
     - tofu init
     - whoami && pwd
-    # - ssh-keygen -f id_ed25519 -N ""
+    - ssh-keygen -f id_ed25519 -N ""
     - tofu validate
     - tofu plan -var="pm_api_token_secret=$PM_API_TOKEN_SECRET" -out=tfplan
     - tofu show -no-color tfplan > tfplan.txt
