onetime ssh copy stage

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,15 +6,26 @@ cache:
     - tfplan
 
 stages:
+  - ssh-copy
   - infra-plan
   - infra-apply
+
+copy ssh:
+  stage: ssh-copy
+  script:
+    - |
+      if [ ! -f /home/gitlab-runner/SSH_COPY ]; then
+        ssh-keygen -f /home/gitlab-runner/.ssh/id_ed25519 -N ""
+        ssh-copy-id -i /home/gitlab-runner/.ssh/id_ed25519.pub tofu-user@$PM_NODE_IP_ADDRESS
+        touch /home/gitlab-runner/SSH_COPY
+      else
+        echo The SSH ID is already copied to the PVE Node. Skipping ...
+      fi
 
 plan infra:
   stage: infra-plan
   script:
     - tofu init
-    - whoami && pwd
-    - ssh-keygen -f id_ed25519 -N ""
     - tofu validate
     - tofu plan -var="pm_api_token_secret=$PM_API_TOKEN_SECRET" -out=tfplan
     - tofu show -no-color tfplan > tfplan.txt
@@ -25,10 +36,6 @@ plan infra:
 apply infra:
   stage: infra-apply
   script:
-    - whoami && pwd
-    - ssh-keygen -f id_ed25519 -N ""
-    # - sshpass -p "$PM_NODE_PASSWORD" ssh-copy-id -i ./id_ed25519.pub root@$PM_NODE_IP_ADDRESS
-    - ssh-copy-id -i ./id_ed25519.pub tofu-user@$PM_NODE_IP_ADDRESS
     - tofu apply -var="pm_api_token_secret=$PM_API_TOKEN_SECRET" -auto-approve
   dependencies:
     - plan infra
