--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ copy ssh:
   script:
     - |
       if [ ! -f /home/gitlab-runner/SSH_COPY ]; then
-        ssh-keygen -f /home/gitlab-runner/.ssh/id_ed25519 -N ""
+        ssh-keygen -f /home/gitlab-runner/.ssh/id_ed25519 -N "" -qy
         ssh-copy-id -i /home/gitlab-runner/.ssh/id_ed25519.pub tofu-user@$PM_NODE_IP_ADDRESS
         touch /home/gitlab-runner/SSH_COPY
       else
