--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,10 +14,10 @@ copy ssh:
   stage: ssh-copy
   script:
     - |
-      if [ ! -f /home/gitlab-runner/SSH_COPY ]; then
-        ssh-keygen -f /home/gitlab-runner/id_ed25519 -N ""
-        ssh-copy-id -i /home/gitlab-runner/id_ed25519.pub tofu-user@$PM_NODE_IP_ADDRESS
-        touch /home/gitlab-runner/SSH_COPY
+      if [ ! -f $HOME/SSH_COPY ]; then
+        ssh-keygen -t rsa -f $HOME/id_rsa -N ""
+        ssh-copy-id -i $HOME/id_rsa.pub tofu-user@$PM_NODE_IP_ADDRESS
+        touch $HOME/SSH_COPY
       else
         echo The SSH ID is already copied to the PVE Node. Skipping ...
       fi
