--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ copy ssh:
     - |
       if [ ! -f $HOME/.ssh/SSH_COPY ]; then
         ssh-keygen -t rsa -f $HOME/.ssh/id_rsa -N ""
-        ssh-copy-id -i $HOME/.ssh/id_rsa.pub tofu-user@$PM_NODE_IP_ADDRESS
+        ssh-copy-id -o StrictHostKeyChecking=no -i $HOME/.ssh/id_rsa.pub tofu-user@$PM_NODE_IP_ADDRESS
         touch $HOME/.ssh/SSH_COPY
       else
         echo The SSH ID is already copied to the PVE Node. Skipping ...
