--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,22 +6,21 @@ cache:
     - tfplan
 
 stages:
-  - ssh-copy
+  # - ssh-copy
   - infra-plan
   - infra-apply
 
-copy ssh:
-  stage: ssh-copy
-  script:
-    - |
-      if [ ! -f $HOME/.ssh/SSH_COPY ]; then
-        rm -r $HOME/.ssh/
-        ssh-keygen -t rsa -f $HOME/.ssh/id_rsa -N ""
-        /usr/bin/sshpass $PM_NODE_PASSWORD ssh-copy-id -i $HOME/.ssh/id_rsa.pub tofu-user@$PM_NODE_IP_ADDRESS
-        touch $HOME/.ssh/SSH_COPY
-      else
-        echo The SSH ID is already copied to the PVE Node. Skipping ...
-      fi
+# copy ssh:
+#   stage: ssh-copy
+#   script:
+#     - |
+#       if [ ! -f $HOME/.ssh/SSH_COPY ]; then
+#         rm -r $HOME/.ssh/
+#         ssh-keygen -t rsa -f $HOME/.ssh/id_rsa -N ""
+#         touch $HOME/.ssh/SSH_COPY
+#       else
+#         echo The SSH ID is already copied to the PVE Node. Skipping ...
+#       fi
 
 plan infra:
   stage: infra-plan
