init bfore destroy

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,8 @@ stages:
 destroy infra:
   stage: infra-destroy
   script:
-    - tofu refresh -var="pm_api_token_secret=$PM_API_TOKEN_SECRET"
+    - tofu init
+    # - tofu refresh -var="pm_api_token_secret=$PM_API_TOKEN_SECRET"
     - tofu destroy -auto-approve -var="pm_api_token_secret=$PM_API_TOKEN_SECRET"
 # plan infra:
 #   stage: infra-plan
