--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,8 +13,8 @@ stages:
 destroy infra:
   stage: infra-destroy
   script:
-    - tofu init
-    - tofu refresh -var="pm_api_token_secret=$PM_API_TOKEN_SECRET"
+    # - tofu init
+    # - tofu refresh -var="pm_api_token_secret=$PM_API_TOKEN_SECRET"
     - tofu destroy -auto-approve -var="pm_api_token_secret=$PM_API_TOKEN_SECRET"
 # plan infra:
 #   stage: infra-plan
@@ -34,8 +34,3 @@ destroy infra:
 #   dependencies:
 #     - plan infra
 #   when: manual
-# rules:
-#   - if: $CI_COMMIT_BRANCH == "master"
-#     changes:
-#       - init # any change in this file will trigger gitlab runner
-#
